added bug fixes and nav bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+  <nav>
+    <div class="logo">
+      <h1>Colourdle</h1>
+    </div>
+    <ul class="nav-links">
+      <li><i class="fa-solid fa-bars"></i></li>
+    </ul>
+  </nav>
+
   <div class="centered">
   <h1>Colourdle</h1>
   <button id="start">Start Game</button>
