--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Colourdle</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
    <script src="https://kit.fontawesome.com/29bb004d97.js" crossorigin="anonymous"></script>
