--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dosis:wght@200;300&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Dosis:wght@200;300&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -29,11 +31,11 @@
       <h3 id="winselement">Wins: 0</h3>
       <h3 id="chipscount"><img src="assets/chip.png"> 0</h3>
       <h2><img id="skin-display" src="assets/skins/potrified.png">You</h3>
-      
+
     </div>
-    
+
     <h1>Colourdle</h1>
-    <p>v0.3.1 - Updates every friday (latest update: 4th May 2024)</p>
+    <p>v0.3.2 - Updates every friday (latest update: 5th May 2024) (bug fixes)</p>
     <button id="start" class="easy">Easy Mode</button>
     <br>
     <button id="start1" class="medium">Medium Mode</button>
@@ -246,7 +248,7 @@
         Hard mode loss: -<img src="assets/chip.png">5<br>
     </div>
   </div>
-  
+
   <div class="shopmenu" id="shopmenu" style="display: none;">
     <div class="skinsmenu-header">
       <h2>Store</h2>
@@ -272,7 +274,8 @@
         <div class="img-wrapper">
           <div class="shining-overlay"></div><img src="assets/skins/king.png">
         </div>King<br>
-        <p>200 chips<p><span class="skin-legendary">Legendary</span>
+        <p>200 chips
+        <p><span class="skin-legendary">Legendary</span>
       </button>
     </div>
   </div>
@@ -292,13 +295,15 @@
         <div class="img-wrapper">
           <div class="shining-overlay-chroma"></div><img src="assets/skins/cyclone.jpg">
         </div>CycloneStorm23<br>
-        <p>Owned <p><span class="skin-youtube">Youtube</span>
+        <p>Owned
+        <p><span class="skin-youtube">Youtube</span>
       </button>
       <button class="skin" id="d3" onclick="equip(3);">
         <div class="img-wrapper">
           <div class="shining-overlay"></div><img src="assets/skins/king.png">
         </div>The king<br>
-        <p>Owned <p><span class="skin-legendary">Legendary</span>
+        <p>Owned
+        <p><span class="skin-legendary">Legendary</span>
       </button>
     </div>
   </div>
