--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <h1>Colourdle</h1>
-    <p>v0.4.0 - Updates every few weeks (latest update: 25th May 2024) (Impossible mode!)</p>
+    <p>v0.4.1 - Updates every few weeks (latest update: 25th May 2024) (Impossible mode! - 0.4.1 added an emergency bug fix where users were getting the rarest skin for free! whoops :( )</p>
     <button id="start" class="easy">Easy</button>
     <br>
     <button id="start1" class="medium">Medium</button>
